--- a/NewsApp/app/src/main/AndroidManifest.xml
+++ b/NewsApp/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity android:name=".ui.NewsActivity">
         </activity>
 
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
